# DELETE-THIS-mail-types

./: .travis.yml  Cargo.toml  README.md  build.rs  test.sh  todo.txt
__examples/: raw_mail.rs  raw_mail_multipart.rs
examples/: raw_mail.rs  raw_mail_multipart.rs  readme.rs
notes/: notes.md  resource.md  structure.md  todo_wrt_encoder.md
src/: char_validators.rs  compose.rs  context.rs  encode.rs  error.rs  file_buffer.rs  iri.rs  lib.rs  macros.rs  mail.rs  mime.rs  resource.rs  utils.rs
src/body/: mod.rs
src/codec/: mod.rs  transfer_encoding.rs  utf8_to_ascii.rs
src/components/: address.rs  address_list.rs  cfws.rs  date_time.rs  disposition.rs  email.rs  header_name.rs  mailbox.rs  mailbox_list.rs  message_id.rs  mime.rs  mod.rs  path.rs  phrase.rs  phrase_list.rs  received_token.rs  text.rs  transfer_encoding.rs  unstructured.rs  word.rs
src/components/components/: mod.rs
src/components/components/behaviour/: encode.rs  utils.rs
src/components/components/behaviour/decode/parser/: mod.rs
src/components/utils/: item.rs
src/composition/: context.rs
src/default_impl/: cpupool.rs  fs.rs  message_id_gen.rs  mod.rs  simple_builder.rs  simple_context.rs  vfs.rs
src/headers/: bcc.rs  headers.gen.spec  mod.rs  utils.rs
src/mail/: body.rs  builder.rs  context.rs  encode.rs  mime.rs  mod.rs  resource.rs  utils.rs
src/mail/builder/: mod.rs
src/mail_composition/: context.rs  data.rs  mod.rs  ports.rs  resource.rs  templates.rs
src/raw_mail/: body.rs  builder.rs  mod.rs
src/resource/: data.rs  mod.rs  source.rs
src/types/: address.rs  address_list.rs  buffer.rs  date_time.rs  disposition.rs  header_name.rs  message_id.rs  mime.rs  mod.rs  path.rs  phrase_list.rs  received_token.rs  shared.rs  text.rs  transfer_encoding.rs  unstructured.rs  vec1.rs
src/types/components/: data_types.rs
src/types/components/behaviour/: encode.rs  mod.rs  utils.rs
src/types/components/behaviour/decode/: mod.rs
src/types/components/behaviour/decode/parser/: mod.rs  slice.rs  utils.rs
src/util_types/: buffer.rs  date_time.rs
tests/: mail.rs
tests/resource/: load_file.rs
