[package]
name = "mail-types"
version = "0.2.0"
description = "[internal/mail-api] provides the Mail type for the mail-api crates (inkl. multipart mime bodies, builder and resource type)"
authors = ["Philipp Korber <p.korber@1aim.com>"]
keywords = ["mail-api", "internal"]
categories = []
license = "MIT OR Apache-2.0"
readme = "./README.md"
documentation = "https://docs.rs/mail-types"
repository = "https://github.com/1aim/mail-types"


[dependencies]
failure = "0.1.1"
futures = "0.1.14"
log = "0.3.8"
rand = "0.3.15"
vec1 = { git="https://github.com/1aim/vec1" }
mail-common = { git="https://github.com/1aim/mail-common" }
mail-headers = { git="https://github.com/1aim/mail-headers" }
chrono = "0.4.0"
soft-ascii-string = "0.2.0"

[dependencies.mime]
git="https://github.com/1aim/mime"
branch="parser_revamp"
version="0.4.0"

[dependencies.futures-cpupool]
optional = true
version = "0.1.5"

[dev-dependencies]
serde_json = "1.0.2"

[features]
default = ["default_impl"]
default_impl =  [
    "default_impl_cpupool",
    "default_impl_fs",
    "default_impl_message_id_gen"
]
default_impl_cpupool = ["futures-cpupool" ]
default_impl_fs = []
default_impl_message_id_gen = []

traceing = [ "mail-common/traceing", "mail-headers/traceing" ]
